[package]
name = "duder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
log = "0.4.17"
rand = "0.8.5"
serde = {version = "1.0.152", features = [ "derive" ]}
serde_json = "1.0.93"
simple_logger = "4.0.0"
